--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "typeorm": "0.2.19",
+    "reflect-metadata": "^0.1.10",
+    "mysql": "^2.14.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
