--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["node"]
+    "types": ["node"],
+    "paths": {
+      "typeorm": ["node_modules/typeorm/browser"]
+    }
   },
   "include": [
     "src/**/*.ts"
